[package]
name = "sd-minimal"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
name = "sd_minimal"
path = "src/lib.rs"

[dependencies]
candle-core =  { version = "=0.10.1" }
candle-nn = { version = "=0.10.1" }
candle-transformers = { version = "=0.10.1" }

clap = { version = "4.6.1", features = ["derive"] }

tokenizers = "0.22.1"
safetensors = "0.7.0"
memmap2 = "0.9.10"
num_cpus = "1.16"
rayon = "1.12.0"
image = { version = "0.25", default-features = false, features = ["png"] }
anyhow = "1.0.102"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"

[[bin]]
name = "flux_gpu"
path = "src/bins/flux_gpu.rs"

[[bin]]
name = "vae_decode"
path = "src/bins/vae_decode.rs"

[[bin]]
name = "text_encoder"
path = "src/bins/text_encoder.rs"

[[bin]]
name = "generate"
path = "src/generate.rs"


[features]
cuda  = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["candle-core/cudnn", "candle-nn/cudnn"]
metal = ["candle-core/metal", "candle-nn/metal"]
